started fixing swagger docs
